tests/error/linear_errors/call_drop_field.err
Guppy compilation failed. Error in file $FILE:24

22:    @guppy(module)
23:    def bar() -> qubit:
24:        return foo().q1
                  ^^^^^
GuppyTypeError: Linear field `q2` of expression with type `MyStruct` is not used
